--- a/main.html
+++ b/main.html
@@ -15,99 +15,59 @@
   </div>
 
 <script  src="./script.js">
-  //Your code goes here
+ const inputs = document.querySelectorAll('.controls input');
+
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
+
+
 </script>
 </body>
 </html>
-
  -->
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Video Player</title>
-    <style>
-        /* Basic styles for the video player */
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-
-        .video-container {
-            position: relative;
-            max-width: 800px;
-            margin: auto;
-            background: black;
-        }
-
-        video {
-            width: 100%;
-            display: block;
-        }
-
-        .controls {
-            position: absolute;
-            bottom: 10px;
-            width: 100%;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.6);
-            color: white;
-        }
-
-        .controls button, .controls input {
-            margin: 0 5px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .progress-container {
-            width: 100%;
-            height: 5px;
-            background-color: #ccc;
-            margin: 10px 0;
-            position: relative;
-        }
-
-        .progress__filled {
-            height: 100%;
-            background-color: #f00;
-            width: 0%;
-        }
-
-        .volume, .speed {
-            width: 80px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Custom Video Player</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="video-container">
-        <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"></video>
-        <div class="controls">
-            <!-- Play/Pause Button -->
-            <button id="playPauseBtn">►</button>
+  <div class="player-wrapper">
+    <!-- Video Player -->
+    <video id="video" class="video" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
 
-            <!-- Rewind 10s Button -->
-            <button id="rewindBtn">« 10s</button>
+    <!-- Video Controls -->
+    <div class="controls">
+      <button id="playPause" class="player__button">►</button>
 
-            <!-- Skip 25s Button -->
-            <button id="skipBtn">25s »</button>
-
-            <!-- Progress Bar -->
-            <div class="progress-container">
-                <div class="progress__filled" id="progress"></div>
-            </div>
-
-            <!-- Volume Control -->
-            Volume: <input type="range" id="volume" class="volume" min="0" max="1" step="0.01" value="1">
-
-            <!-- Playback Speed Control -->
-            Speed: <input type="range" id="speed" class="speed" min="0.5" max="2" step="0.1" value="1">
+      <div class="progress-container">
+        <div id="progress" class="progress">
+          <div id="progress__filled" class="progress__filled"></div>
         </div>
-    </div>
+      </div>
 
-    <script src="scripts.js"></script>
+      <button id="rewind" class="skip-button">« 10s</button>
+      <button id="skip" class="skip-button">25s »</button>
+
+      <!-- Volume Control -->
+      <input id="volume" type="range" class="controls__input" min="0" max="1" step="0.05" value="1">
+
+      <!-- Playback Speed Control -->
+      <input id="playbackSpeed" type="range" class="controls__input" min="0.5" max="2" step="0.1" value="1">
+      <div id="speed-label" class="speed-label">1×</div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
+ 
