--- a/main.html
+++ b/main.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,34 +7,33 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="player-wrapper">
-    <!-- Video Player -->
-    <video id="video" class="video" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
 
-    <!-- Video Controls -->
+  <div class="wrapper">
+    <!-- Video Element -->
+    <video id="video" class="flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+
+    <!-- Controls Section -->
     <div class="controls">
-      <button id="playPause" class="player__button">►</button>
+      <!-- Play/Pause Button -->
+      <button id="playPauseBtn" class="player__button">►</button>
 
-      <div class="progress-container">
-        <div id="progress" class="progress">
-          <div id="progress__filled" class="progress__filled"></div>
-        </div>
+      <!-- Progress Bar -->
+      <div class="progress">
+        <div id="progressBar" class="progress__filled"></div>
       </div>
 
-      <button id="rewind" class="skip-button">« 10s</button>
-      <button id="skip" class="skip-button">25s »</button>
-
       <!-- Volume Control -->
-      <input id="volume" type="range" class="controls__input" min="0" max="1" step="0.05" value="1">
+      <input type="range" id="volume" class="volume" min="0" max="1" step="0.05" value="1">
 
       <!-- Playback Speed Control -->
-      <input id="playbackSpeed" type="range" class="controls__input" min="0.5" max="2" step="0.1" value="1">
-      <div id="speed-label" class="speed-label">1×</div>
+      <input type="range" id="speed" class="speed" min="0.5" max="2" step="0.1" value="1">
+
+      <!-- Rewind and Fast-forward Buttons -->
+      <button id="rewindBtn">« 10s</button>
+      <button id="forwardBtn">25s »</button>
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
-
- 
