--- a/main.html
+++ b/main.html
@@ -1,39 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Custom Video Player</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <div class="wrapper">
-    <!-- Video Element -->
-    <video id="video" class="flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
-
-    <!-- Controls Section -->
-    <div class="controls">
-      <!-- Play/Pause Button -->
-      <button id="playPauseBtn" class="player__button">►</button>
-
-      <!-- Progress Bar -->
-      <div class="progress">
-        <div id="progressBar" class="progress__filled"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Custom Video Player</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="player">
+      <video class="player__video viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+      <div class="player__controls">
+        <div class="progress">
+          <div class="progress__filled"></div>
+        </div>
+        <button class="player__button toggle" title="Toggle Play">►</button>
+        <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" />
+        <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" />
+        <button data-skip="-10" class="player__button">« 10s</button>
+        <button data-skip="25" class="player__button">25s »</button>
       </div>
-
-      <!-- Volume Control -->
-      <input type="range" id="volume" class="volume" min="0" max="1" step="0.05" value="1">
-
-      <!-- Playback Speed Control -->
-      <input type="range" id="speed" class="speed" min="0.5" max="2" step="0.1" value="1">
-
-      <!-- Rewind and Fast-forward Buttons -->
-      <button id="rewindBtn">« 10s</button>
-      <button id="forwardBtn">25s »</button>
     </div>
-  </div>
 
-  <script src="scripts.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
